--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body {
 .logo-web {
   color: var(--accent-color);
   font-family: "Raleway";
+  font-weight: 800;
   font-size: 18px;
   line-height: 24px;
   display: flex;
@@ -25,6 +26,7 @@ body {
   color: var(--title-text-color);
   font-family: "Raleway";
   font-size: 18px;
+  font-weight: 800;
   line-height: 24px;
   display: flex;
   letter-spacing: 0.03em;
