--- a/css/styles.css
+++ b/css/styles.css
@@ -13,7 +13,7 @@ body {
   letter-spacing: 0.02em;
 }
 /* Logo web */
-.logo-web {
+.header-logo-web {
   color: var(--accent-color);
   font-family: "Raleway", sans-serif;
   font-weight: 800;
@@ -24,7 +24,7 @@ body {
   letter-spacing: 0.03em;
 }
 /* logo studio */
-.logo-studio {
+.header-logo-studio {
   color: var(--title-text-color);
   font-family: "Raleway", sans-serif;
   font-weight: 800;
