--- a/css/styles.css
+++ b/css/styles.css
@@ -100,8 +100,9 @@ a {
   color: var(--section-title-text-color);
   font-weight: 700;
   font-size: 56px;
-  line-height: 60px;
+  line-height: 1.07;
   text-align: center;
+  letter-spacing: 0.02em;
 }
 /* footer */
 .footer {
