--- a/css/styles.css
+++ b/css/styles.css
@@ -106,6 +106,7 @@ a {
 }
 .button-title-text {
   color: var(--section-title-text-color);
+  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
