--- a/css/styles.css
+++ b/css/styles.css
@@ -73,6 +73,9 @@ body {
 }
 .section-title {
   color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
 }
 /* site-contacts */
 .text-contacts-email {
@@ -81,9 +84,6 @@ body {
   height: 24px;
   left: 940px;
   top: 24px;
-
-  /* Body */
-
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -114,6 +114,9 @@ body {
   line-height: 1.07;
   text-align: center;
   letter-spacing: 0.02em;
+}
+.section-title-hidden {
+  visibility: hidden;
 }
 /* footer */
 .footer {
