--- a/css/styles.css
+++ b/css/styles.css
@@ -122,6 +122,14 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+/* Home page section 3 */
+.section-title-p {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  text-transform: capitalize;
+}
 /* footer */
 .footer {
   background-color: var(--title-text-color);
