--- a/css/styles.css
+++ b/css/styles.css
@@ -102,6 +102,7 @@ body {
   font-size: 16px;
   line-height: 24px;
 }
+/* Home page section 1 */
 .section-hero {
   background-color: var(--title-text-color);
 }
@@ -113,6 +114,7 @@ body {
   text-align: center;
   letter-spacing: 0.02em;
 }
+/* Home page section 2 */
 .section-title-hidden {
   visibility: hidden;
 }
