--- a/css/styles.css
+++ b/css/styles.css
@@ -65,7 +65,7 @@ body {
   text-decoration: none;
 }
 /* Site-nav */
-.site-nav a {
+.site-nav {
   color: var(--title-text-color);
   font-weight: 500;
   font-size: 16px;
