--- a/css/styles.css
+++ b/css/styles.css
@@ -146,3 +146,19 @@ body {
 .footer-title {
   color: var(--footer-title-text-color);
 }
+/* Portfolio */
+.button-filtr {
+  color: var(--section-title-text-color);
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  cursor: pointer;
+  letter-spacing: 0.04em;
+}
+.button-filtr:hover {
+  color: var(--accent-color);
+}
