--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,7 @@ body {
   text-transform: uppercase;
   letter-spacing: 0.03em;
 }
-.header-link:hover {
+.header-link:is(:hover, :focus) {
   color: var(--hover-color);
 }
 .addres {
