--- a/css/styles.css
+++ b/css/styles.css
@@ -116,6 +116,7 @@ body {
   visibility: hidden;
 }
 .text-p {
+  color: var(--primary-text-color);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
