--- a/css/styles.css
+++ b/css/styles.css
@@ -77,16 +77,17 @@ body {
 }
 /* site-contacts */
 .text-contacts-email {
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
 }
 .text-contacts-tel {
-  font-style: normal;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+}
+.addres {
+  font-style: normal;
 }
 /* Home page section 1 */
 .section-hero {
