--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,9 @@ body {
   font-size: 16px;
   line-height: 1.5;
 }
+.auth-nav:is(:hover, :focus) {
+  color: var(--hover-color);
+}
 /* text none */
 .list {
   list-style: none;
