--- a/css/styles.css
+++ b/css/styles.css
@@ -52,11 +52,13 @@ body {
 }
 /* auth-nav */
 .auth-nav a {
-  color: var(--primary-text-color);
-  font-style: normal;
+  color: #434455;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
+}
+.address {
+  font-style: normal;
 }
 .auth-nav:is(:hover, :focus) {
   color: var(--hover-color);
