--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ body {
 }
 /* auth-nav */
 .auth-nav a {
-  color: #434455;
+  color: var(--primary-text-color)
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
