--- a/css/styles.css
+++ b/css/styles.css
@@ -36,10 +36,10 @@ body {
   letter-spacing: 0.03em;
 }
 .header-link:is(:hover, :focus) {
-  color: #404bbf;
+  color: var(--hover-color);
 }
 .contacts-link:is(:hover, :focus) {
-  color: #404bbf;
+  color: var(--hover-color);
 }
 /* button */
 .button-title-text {
@@ -55,7 +55,7 @@ body {
 }
 /* auth-nav */
 .auth-nav a {
-  color: #434455;
+  color: var(--primary-text-color);
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
